// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/provision/Audit/AuditDetailItem render audit detail item with children 1`] = `
<body>
  <div>
    <div
      class="css-1m0yqz8"
    >
      <div
        class="audit-info-item-label"
      >
        test label
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span>
            test value
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`/provision/Audit/AuditDetailItem render audit detail item with value 1`] = `
<body>
  <div>
    <div
      class="css-1m0yqz8"
    >
      <div
        class="audit-info-item-label"
      >
        test label
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          test value
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`/provision/Audit/AuditDetailItem render diff type detail item 1`] = `
<body>
  <div>
    <div
      class="css-1m0yqz8"
    >
      <div
        class="audit-info-item-label"
      >
        test label
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px; padding-bottom: 8px;"
        />
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          test value
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`/provision/Audit/AuditDetailItem render diff type detail item 2`] = `
<body>
  <div>
    <div
      class="css-1m0yqz8"
    >
      <div
        class="audit-info-item-label"
      >
        test label
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px; padding-bottom: 8px;"
        />
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          test value
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="css-1m0yqz8"
    >
      <div
        class="audit-info-item-label"
      >
        test label
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px; padding-bottom: 8px;"
        >
          <svg
            height="16"
            viewBox="0 0 18 18"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 16.5a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15M9 15A6 6 0 1 0 9 3a6 6 0 0 0 0 12m.75-6h3v1.5h-4.5V5.25h1.5z"
              fill="#8A8F99"
            />
          </svg>
        </div>
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          test value
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`/provision/Audit/AuditDetailItem render diff type detail item 3`] = `
<body>
  <div>
    <div
      class="css-1m0yqz8"
    >
      <div
        class="audit-info-item-label"
      >
        test label
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px; padding-bottom: 8px;"
        />
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          test value
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="css-1m0yqz8"
    >
      <div
        class="audit-info-item-label"
      >
        test label
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px; padding-bottom: 8px;"
        >
          <svg
            height="16"
            viewBox="0 0 18 18"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 16.5a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15M9 15A6 6 0 1 0 9 3a6 6 0 0 0 0 12m.75-6h3v1.5h-4.5V5.25h1.5z"
              fill="#8A8F99"
            />
          </svg>
        </div>
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          test value
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="css-1m0yqz8"
    >
      <div
        class="audit-info-item-label"
      >
        test label
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px; padding-bottom: 8px;"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
          >
            <div
              class="ant-space-item"
            >
              <span
                class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
              >
                <span
                  class="ant-avatar-string"
                  style="transform: scale(1) translateX(-50%);"
                >
                  T
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          test value
        </div>
      </div>
    </div>
  </div>
</body>
`;
